<resources>
    <string name="app_name">Personal Best</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="title_stats">Stats</string>
    <string name="please_wait">Please Wait</string>

    <!-- Daily view fragment strings -->
    <string name="start_record">Start Walk/Run</string>
    <string name="end_record">End Walk/Run</string>
    <string name="text_divider">/</string>
    <string name="current_session">Current Session</string>
    <string name="time">Time</string>
    <string name="step">Step</string>
    <string name="speed">Speed</string>
    <string name="mph">mph</string>
    <string name="mile">mi</string>
    <string name="add_steps">+500</string>
    <string name="change_goal">Change Goal</string>
    <string name="time_set">Set Time</string>

    <!-- input dialog -->
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- set goal dialog -->
    <string name="set_goal">Set Goal</string>
    <string name="change_goal_instruction_initial">Please enter your new step goal.</string>
    <string name="change_goal_instruction_failed">Please enter a number bigger than 0.</string>

    <!-- Increase goal dialog -->
    <string name="met_goal">Congrats, You have met your goal! Do you want to increase your step by 500?</string>

    <!-- Encouragement dialog -->
    <string name="encouragement">Congrats, you have doubled your steps from yesterday!</string>

    <!-- Set Time Dialog -->
    <string name="change_time_instruction_initial">"Please enter current time (in milliseconds from Epoch)."</string>
    <string name="change_time_instruction_failed">"Please enter a number that is 0 or higher."</string>


    <!-- add steps -->
    <string name="add_step_instruction_initial">initial</string>
    <string name="add_step_instruction_failed">failed</string>

    <!-- Toast texts -->
    <string name="saved">Saved</string>
    <string name="refresh">Refreshing</string>
    <string name="friend_request_accept_success">Friend Added</string>
    <string name="friend_request_accept_fail">Error: Accept Friend Failed</string>
    <string name="friend_request_reject_success">Request Deleted</string>
    <string name="friend_request_reject_fail">Error: Remove Request Failed</string>
    <string name="friend_remove_success">Friend Deleted</string>
    <string name="friend_remove_fail">Error: Remove Friend Failed</string>

    <!-- Height Prompt texts -->
    <string name="ft_str">ft.</string>
    <string name="inch_str">inch.</string>
    <string name="prompt_height_str">Please enter your height</string>
    <string name="height_instruction_failed">Please enter a valid height.</string>

    <!-- Friends View -->
    <string name="pending_request">Pending Request</string>
    <string name="prompt_add_friend_str">Please enter the user\'s email address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="placeholder_str">Place Holder</string>
    <string name="placeholder_num">0</string>
    <string name="placeholder_time">--:--:--</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_add_friend">add_friend</string>
    <string name="action_refresh_friends">refresh_friends</string>
    <string name="friend_request_send_success">Request Sent!</string>
    <string name="friend_request_user_nonexist">Error: User does not exist</string>
    <string name="no_internet_connection">Error: No Internet Connection</string>
    <string name="friend_already_exists">Already Friends / Pending Approve</string>
    <string name="send_message_success">Message Sent!</string>
    <string name="send_message_fail">Error: No Internet Connection</string>
</resources>