<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyGoalFragment"
    android:orientation="vertical"
    style="@style/root_layout">

    <!-- First part -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- daily goal step count -->
        <LinearLayout
            android:id="@+id/daily_goal_steps_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/daily_goal_steps_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                style="@style/normal_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_divider"
                style="@style/normal_text"/>

            <TextView
                android:id="@+id/daily_goal_goal_steps_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                style="@style/normal_text"/>

            <Button
                android:id="@+id/daily_goal_change_goal_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_goal"/>

            <Button
                android:id="@+id/daily_goal_add_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_steps"/>

        </LinearLayout>

        <!-- daily goal distance count -->

        <LinearLayout
            android:id="@+id/daily_goal_dist_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/daily_goal_dist_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                style="@style/normal_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mile"
                style="@style/normal_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_divider"
                style="@style/normal_text"/>

            <TextView
                android:id="@+id/daily_goal_goal_dist_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                style="@style/normal_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mile"
                style="@style/normal_text"/>

            <!-- daily goal set time button -->
            <Button
                android:id="@+id/daily_goal_set_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_set"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Second part -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Current session title -->

        <TextView
            android:id="@+id/daily_goal_current_session_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_session"
            style="@style/h5_text"/>

        <!-- Current session detail -->

        <LinearLayout
            android:id="@+id/daily_goal_current_session_info_layout"
            style="@style/row">

            <!-- Time info-->

            <LinearLayout
                style="@style/column">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    style="@style/normal_text" />

                <TextView
                    android:id="@+id/daily_goal_current_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_time"
                    style="@style/normal_text"/>

            </LinearLayout>

            <!-- Distance info-->

            <LinearLayout
                style="@style/column">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step"
                    style="@style/normal_text" />

                <TextView
                    android:id="@+id/daily_goal_current_step_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_num"
                    style="@style/normal_text"/>

            </LinearLayout>

            <!-- Speed info -->

            <LinearLayout
                style="@style/column">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    style="@style/normal_text" />

                <TextView
                    android:id="@+id/daily_goal_current_speed_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_num"
                    style="@style/normal_text"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <!-- Third part-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/daily_goal_record_btn"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/start_record"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

</LinearLayout>