<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyGoalFragment"
    android:orientation="vertical"
    android:gravity="center_vertical"

    style="@style/root_layout">


    <TextView
        android:id="@+id/fragment_input_dialog_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_height_str"
        style="@style/normal_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:layout_weight="1"
        android:id="@+id/fragment_input_dialog_et_ft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text" />

        <TextView
            android:id="@+id/fragment_input_dialog_tv_ft"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ft_str" />


    <EditText
        android:layout_weight="1"
        android:id="@+id/fragment_input_dialog_et_inch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text" />

        <TextView
            android:id="@+id/fragment_input_dialog_tv_inch"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/inch_str" />

    </LinearLayout>
</LinearLayout>